# gage_study_app

./: .gitignore  Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html  operatorA.csv  operatorA.json  operatorB.csv  operatorB.json  operatorC.csv  operatorC.json
frontend/assets/: sw.js
frontend/src/: anova_table.rs  app.rs  data_table.rs  file_dialog.rs  fileinput.rs  gage_eval_table.rs  lib.rs  main.rs  statistics.rs  study_plots.rs  varcomp_table.rs
