[package]
name = "frontend"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
egui_plot = "0.32"
egui_extras = "0.31"
eframe = { version = "0.31", features = ["persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
futures = "0.3.25"
anyhow = "1.0"
csv = "1.3"
tracing = "0.1"
gage_study = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
